name:                sokoban
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ilya-murzinov/sokoban-haskell
license:             BSD3
license-file:        LICENSE
author:              Ilya Murzinov
maintainer:          murz42@gmail.com
copyright:           2016 Ilya Murzinov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable codeworld-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , codeworld-api == 0.2.0.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ilya-murzinov/sokoban-haskell
